# projects

./: .gitignore
Week1/Week1FollowAlong/: CMakeLists.txt
Week1/Week1FollowAlong/src/: array_stats.cpp  array_stats.h
Week1/Week1FollowAlong/tests/: array_stats_test.cpp
Week2/Week2FollowAlong/: CMakeLists.txt
Week2/Week2FollowAlong/src/: library_live_coding.cpp
Week4/Week4FollowAlong/: CMakeLists.txt
Week4/Week4FollowAlong/src/: advanced_pointers_practice.cpp
